--- a/deno.json
+++ b/deno.json
@@ -1,7 +1,11 @@
 {
 	"tasks": {
-		"dev": "deno run --watch main.ts"
+		"dev": "deno run --watch main.ts",
+		"test": "deno test --unstable-kv -A --trace-ops --watch"
 	},
+	"name": "@ts-rex/lucia-denokv",
+	"version": "1.0.1",
+	"exports": "./mod.ts",
 	"importMap": "importmap.json",
 	"fmt": {
 		"indentWidth": 4,
